# duplicate-stickers-remover-bot

./: .pylintrc  Dockerfile  README.md  docker-entrypoint.sh  mypy.ini  pyproject.toml
.github/workflows/: lint-and-tests.yml
app/: config.py  constants.py  handlers.py  lock.py  main.py  services.py  utils.py
app/tests/: conftest.py  test_handlers.py  test_lock.py  test_services.py  test_utils.py
